fix header z-index

--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -22,6 +22,8 @@
   border: 1px solid #000000;
   display: flex;
   animation-delay: 1.3s;
+  position: relative;
+  z-index: 1;
 }
 
 .blog__btn {
