--- a/source/sass/general/global.scss
+++ b/source/sass/general/global.scss
@@ -110,7 +110,7 @@ a {
 .top {
   border-top: 1px solid #000000;
   margin-top: 30px;
-  animation-delay: 1.3s;
+  animation-delay: 1s;
 }
 
 .title {
@@ -122,10 +122,5 @@ a {
 
 b {
   font-weight: 500;
-}
-
-.main {
-  position: relative;
-  z-index: -1;
 }
 
